# neat-training

./: .gitignore  main.py  pyproject.toml
environments/ant/: neat.cfg
environments/ant/results/: ant_pilot(2 arms inactive).pkl
environments/cartpole/: graphics.py
environments/cartpole/neat/metrics/: main.py
environments/cartpole/neat/results/: best_agent.pkl
environments/cartpole/rl/: model.py
environments/cartpole/rl/metrics/: main.py
environments/cartpole/rl/results/: dqn_cartpole_winner.pth
environments/lunar-lander/: models.py  neat.cfg
environments/lunar-lander/neat/: model.py  neat.cfg
environments/lunar-lander/neat/metrics/: metrics.py
environments/lunar-lander/neat/results/: best_lunar_pilot(without_turbulence).pkl  best_lunar_pilot.pkl
environments/lunar-lander/results/: best_lunar_pilot.pkl
environments/lunar-lander/rl/: evaluations(without_wind).npz  model.py  model_windy.py
environments/lunar-lander/rl/dqn_universal_logs/Universal_DQN_1/: events.out.tfevents.1775816545.isn0v-MCLF-XX.222900.0
environments/lunar-lander/rl/metrics/: metrics.py
environments/lunar-lander/rl/results_universal/: evaluations.npz
environments/lunar-lander/rl/results_windy/: evaluations.npz
metrics/: main.py
neat/ant/: model.py  test.py
neat/ant/results/: ant_pilot(almost naturally).pkl  ant_pilot(just_stands).pkl
neat/cart-pole/: model.py  neat.cfg
neat/cart-pole/metrics/: main.py
neat/lunar-lander/: model.py
prompts/: cartpole.txt  lunarlander.txt
rl/: model.py
(+1 files in other folders)
